# MobileDataBridge

./: CMakeLists.txt  README.md  adbsocketclient.cpp  adbsocketclient.h  dataanalyzer.cpp  dataanalyzer.h  datatransfermanager.cpp  datatransfermanager.h  devicemanager.cpp  devicemanager.h  iconprovider.cpp  iconprovider.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  statemanager.cpp  statemanager.h  transferstatisticsdialog.cpp  transferstatisticsdialog.h  transferstatisticsdialog.ui
